Fixed tooltip z-index

--- a/css/seeker.css
+++ b/css/seeker.css
@@ -31,6 +31,7 @@ div.seeker-table-container {
 	position: absolute;
 	left: 0px;
 	top: 24px;
+	z-index: 1000;
 }
 
 table.seeker-outter tr:hover {
